[gd_scene load_steps=13 format=3 uid="uid://cnoqdgjfurpbx"]

[ext_resource type="Script" path="res://scenes/main/win_screen.gd" id="1_hyof4"]
[ext_resource type="Texture2D" uid="uid://54xendjioumv" path="res://assets/Endings/win-1-1.png" id="2_j16au"]
[ext_resource type="Texture2D" uid="uid://dsmmd5bj28vd5" path="res://assets/Endings/win-1-2.png" id="3_6gw33"]
[ext_resource type="Texture2D" uid="uid://bg4dsxjohl3ai" path="res://assets/Endings/win-2-1.png" id="4_73xdm"]
[ext_resource type="Texture2D" uid="uid://mepqkuixkics" path="res://assets/Endings/win-2-2.png" id="5_5pbws"]
[ext_resource type="Texture2D" uid="uid://4s0dgxjcn0ec" path="res://assets/Endings/win-2-3.png" id="6_xcjhu"]
[ext_resource type="Texture2D" uid="uid://vhjojfe1ltll" path="res://assets/Endings/win-3-1.png" id="7_dve0j"]
[ext_resource type="Texture2D" uid="uid://beoeli56pjrdp" path="res://assets/Endings/win-3-2.png" id="8_ouf4q"]
[ext_resource type="Texture2D" uid="uid://bnnui5jwan6f5" path="res://assets/Endings/clicknext.png" id="9_qrcwu"]
[ext_resource type="AudioStream" uid="uid://c2yps4uvjykmu" path="res://assets/wav/end_song.mp3" id="10_4n7nb"]
[ext_resource type="AudioStream" uid="uid://3p21ioy8ldjd" path="res://assets/wav/end_chime_1.wav" id="10_ybk2h"]
[ext_resource type="AudioStream" uid="uid://dyrdwyr0bp7p2" path="res://assets/wav/end_chime_2.wav" id="11_kuxiw"]

[node name="WinScreen" type="Node2D"]
script = ExtResource("1_hyof4")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 400.0
offset_bottom = 226.0
color = Color(0, 0, 0, 1)

[node name="Screen1" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_left = 196.0
offset_top = 112.0
offset_right = 196.0
offset_bottom = 112.0

[node name="Panel1_1" type="TextureRect" parent="Screen1"]
unique_name_in_owner = true
texture_filter = 1
texture_repeat = 1
layout_mode = 0
offset_left = -190.0
offset_top = -106.0
offset_right = 39.0
offset_bottom = 105.0
texture = ExtResource("2_j16au")
stretch_mode = 2

[node name="Panel1_2" type="TextureRect" parent="Screen1"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0)
texture_filter = 1
texture_repeat = 1
layout_mode = 0
offset_left = 47.0
offset_top = -106.0
offset_right = 198.0
offset_bottom = 105.0
texture = ExtResource("3_6gw33")

[node name="Screen2" type="Control" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 0
offset_right = 400.0
offset_bottom = 225.0

[node name="Panel2_1" type="TextureRect" parent="Screen2"]
unique_name_in_owner = true
texture_filter = 1
texture_repeat = 1
layout_mode = 0
offset_left = 6.0
offset_top = 6.0
offset_right = 244.0
offset_bottom = 217.0
texture = ExtResource("4_73xdm")

[node name="Panel2_2" type="TextureRect" parent="Screen2"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0)
texture_filter = 1
texture_repeat = 1
layout_mode = 0
offset_left = 248.0
offset_top = 6.0
offset_right = 394.0
offset_bottom = 101.0
texture = ExtResource("5_5pbws")

[node name="Panel2_3" type="TextureRect" parent="Screen2"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0)
texture_filter = 1
texture_repeat = 1
layout_mode = 0
offset_left = 248.0
offset_top = 105.0
offset_right = 394.0
offset_bottom = 217.0
texture = ExtResource("6_xcjhu")

[node name="Screen3" type="Control" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 0
offset_right = 400.0
offset_bottom = 225.0

[node name="Panel3_1" type="TextureRect" parent="Screen3"]
unique_name_in_owner = true
texture_filter = 1
texture_repeat = 1
layout_mode = 0
offset_left = 5.0
offset_top = 6.0
offset_right = 395.0
offset_bottom = 217.0
texture = ExtResource("7_dve0j")
stretch_mode = 2

[node name="Panel3_2" type="TextureRect" parent="Screen3"]
unique_name_in_owner = true
texture_filter = 1
texture_repeat = 1
layout_mode = 0
offset_left = 410.0
offset_top = 32.0
offset_right = 556.0
offset_bottom = 188.0
texture = ExtResource("8_ouf4q")

[node name="Mouse" type="TextureRect" parent="."]
unique_name_in_owner = true
visible = false
texture_filter = 1
texture_repeat = 1
offset_left = 380.0
offset_top = 200.0
offset_right = 780.0
offset_bottom = 425.0
texture = ExtResource("9_qrcwu")
stretch_mode = 2

[node name="ClickArea" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 400.0
offset_bottom = 225.0

[node name="EndMusic" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("10_4n7nb")
volume_db = -1.874
autoplay = true

[node name="EndChime1" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("10_ybk2h")
volume_db = 8.433

[node name="EndChime2" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("11_kuxiw")
volume_db = 3.748

[connection signal="gui_input" from="ClickArea" to="." method="_on_click_area_gui_input"]
